started navbar component and changed gulp file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My React App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="public/styles/style.css">
+    <title>Sylvenie Lindor Foundation</title>
 </head>
 <body>
    <div id="app"></div>
