--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="public/styles/style.css">
     <title>Sylvenie Lindor Foundation</title>
 </head>
 <body>
    <div id="app"></div>
-   
     <script src="public/scripts/app.js"></script>
 </body>
 </html>
