iteration before final changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>Sylvenie Lindor Foundation</title>
 </head>
 <body>
-   <div id="app"></div>
+    <div id="navbar"></div>
+    <div id="app"></div>
     <script src="public/scripts/app.js"></script>
 </body>
 </html>
